[package]
name = "tuinance"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
tokio = { version = "1.9.0", features = ["full"] }
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
